--- a/Cozy_Cuisine/Views/Wiki/GameplayManagement.cshtml
+++ b/Cozy_Cuisine/Views/Wiki/GameplayManagement.cshtml
@@ -5,139 +5,171 @@
 }
 @* TEMPORARY CSS LANG DASHBOARD *@
 <link href="~/css/dashboard.css" rel="stylesheet" />
-
-<form id="gameplayForm" method="post" asp-controller="Wiki" asp-action="CreateGameplay" onsubmit="confirmSubmit(event)">
-    <div>
-        <label asp-for="NewGameMechanic.GMName"></label>
-        <input type="text" asp-for="NewGameMechanic.GMName" class="form-control" required />
-    </div>
-    <div>
-        <label asp-for="NewGameMechanic.Description"></label>
-        <textarea asp-for="NewGameMechanic.Description" class="form-control" rows="3" required></textarea>
-    </div>
-    <div class="form-group">
-        <label>FAQ Image URLs</label>
-        <div id="imageUrlContainer">
-            <div class="input-group mb-2">
-                <input type="text" class="form-control" name="gameplayImageUrls" placeholder="Enter Image URL" />
-                <button type="button" class="btn btn-danger" onclick="removeImageUrl(this)">Remove</button>
-            </div>
-        </div>
-        <button type="button" onclick="addImageUrl()" class="btn btn-secondary mt-2">Add Another URL</button>
-    </div>
-
-    <!-- Hidden input to hold the final combined string -->
-    <input type="hidden" id="URLImageList" asp-for="NewGameMechanic.URLImageList" />
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<div class="pgnamecont2 container mb-3 p-3 rounded-3 shadow">
+    <div class="dashboard fs-3 m-0">Gameplay</div>
+</div>
 
 
-
-<table class="table table-bordered table-hover table-striped">
-    <thead>
-        <tr>
-            <th>Game Mechanics ID</th>
-            <th>Mechanics Name</th>
-            <th>Description</th>
-            <th>URL Images</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.GameMechanics != null && Model.GameMechanics.Any())
-        {
-            @foreach (var gameMechanics in Model.GameMechanics)
-            {
-
-                <tr>
-                    <td>@gameMechanics.GameMechId</td>
-                    <td>@gameMechanics.GMName</td>
-                    <td>@gameMechanics.Description</td>
-                    <td>
-                        @if (!string.IsNullOrEmpty(gameMechanics.URLImageList))
+<div class="container mt-4">
+    <ul class="recentnavtabs nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="recenttabs nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">List</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="recenttabs nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Add</button>
+        </li>
+    </ul>
+    <div class="tab-content mt-3" id="myTabContent">
+        <!--list-->
+        <div class="tab-pane fade show active" id="tab1" role="tabpanel">
+            <div class="container">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>Game Mechanics ID</th>
+                            <th>Mechanics Name</th>
+                            <th>Description</th>
+                            <th>URL Images</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @if (Model.GameMechanics != null && Model.GameMechanics.Any())
                         {
-                            var imageUrls = gameMechanics.URLImageList.Split(',');
-                            foreach (var url in imageUrls)
+                            @foreach (var gameMechanics in Model.GameMechanics)
                             {
-                                // Extract File ID from Google Drive URL
-                                var fileId = "";
-                                var parts = url.Split('/');
-                                if (parts.Length >= 6)
-                                {
-                                    fileId = parts[5];
-                                }
 
-                                if (!string.IsNullOrEmpty(fileId))
-                                {
-                                    var previewUrl = $"https://drive.google.com/file/d/{fileId}/preview";
-                                    <iframe src="@previewUrl" width="300" height="200" style="margin-right: 10px; border: none;"></iframe>
-                                }
+                                <tr>
+                                    <td>@gameMechanics.GameMechId</td>
+                                    <td>@gameMechanics.GMName</td>
+                                    <td>@gameMechanics.Description</td>
+                                    <td>
+                                        @if (!string.IsNullOrEmpty(gameMechanics.URLImageList))
+                                        {
+                                            var imageUrls = gameMechanics.URLImageList.Split(',');
+                                            foreach (var url in imageUrls)
+                                            {
+                                                // Extract File ID from Google Drive URL
+                                                var fileId = "";
+                                                var parts = url.Split('/');
+                                                if (parts.Length >= 6)
+                                                {
+                                                    fileId = parts[5];
+                                                }
+
+                                                if (!string.IsNullOrEmpty(fileId))
+                                                {
+                                                    var previewUrl = $"https://drive.google.com/file/d/{fileId}/preview";
+                                                    <iframe src="@previewUrl" width="300" height="200" style="margin-right: 10px; border: none;"></iframe>
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <span>No Image Uploaded</span>
+                                        }
+                                    </td>
+                                    <td>
+
+                                        <a asp-action="DetailStoryPlot" asp-route-id="@gameMechanics.GameMechId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye"></i> View</a>
+
+                                        @* opens a modal popup to make the changes *@
+                                        <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#editGameplayModal"
+                                                data-id="@gameMechanics.GameMechId"
+                                                data-name="@gameMechanics.GMName"
+                                                data-description="@gameMechanics.Description"
+                                                data-urls="@gameMechanics.URLImageList">
+                                            <i class="fa-solid fa-pen-to-square"></i>
+                                            Edit
+                                        </button>
+
+
+                                        <form class="d-inline" id="deleteForm-@gameMechanics.GameMechId" method="post" asp-action="DeleteGameplay" asp-route-id="@gameMechanics.GameMechId">
+                                            <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1" onclick="confirmDelete(event, 'deleteForm-@gameMechanics.GameMechId')"><i class="fa-solid fa-trash"></i> Delete</button>
+                                        </form>
+                                    </td>
+                                </tr>
                             }
                         }
-                        else
-                        {
-                            <span>No Image Uploaded</span>
-                        }
-                    </td>
-                    <td>
+                    </tbody>
+                </table>
 
-                        <a asp-action="DetailStoryPlot" asp-route-id="@gameMechanics.GameMechId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i>View</a>
+            </div>
 
-                        @* opens a modal popup to make the changes *@
-                        <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1"
-                                data-bs-toggle="modal"
-                                data-bs-target="#editGameplayModal"
-                                data-id="@gameMechanics.GameMechId"
-                                data-name="@gameMechanics.GMName"
-                                data-description="@gameMechanics.Description"
-                                data-urls="@gameMechanics.URLImageList">
-                            <i class="fa-solid fa-pen-to-square fa-sm"></i>
-                            Edit
-                        </button>
+        </div>
+        <!--add-->
+        <div class="tab-pane fade" id="tab2" role="tabpanel">
+            <div class="formcont container p-4 shadow-sm rounded-3 mb-5">
+                <form id="gameplayForm" method="post" asp-controller="Wiki" asp-action="CreateGameplay" onsubmit="confirmSubmit(event)">
+                    <div>
+                        <label asp-for="NewGameMechanic.GMName" class="form-label">Mechanics Name <span class="reqsymbol">*</span></label>
+                        <input type="text" asp-for="NewGameMechanic.GMName" class="form-control mb-3 focus-ring" required placeholder="Enter Gameplay Name" />
+                    </div>
+                    <div>
+                        <label asp-for="NewGameMechanic.Description" class="form-label">Description <span class="reqsymbol">*</span></label>
+                        <textarea asp-for="NewGameMechanic.Description" class="form-control mb-3 focus-ring" rows="3" required placeholder="Enter Description"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Gameplay Image URLs</label>
+                        <div id="imageUrlContainer">
+                            <div class="input-group mb-2">
+                                <input type="text" class="form-control mb-1 focus-ring" name="gameplayImageUrls" placeholder="Enter Image URL" />
+                                <button type="button" class="addremovebtn focus-ring btn mb-1" onclick="removeImageUrl(this)"><i class="fa-solid fa-trash"></i> Remove</button>
+                            </div>
+                        </div>
+                        <button type="button" onclick="addImageUrl()" class="addremovebtn focus-ring btn mb-3">Add Another URL</button>
+                    </div>
+
+                    <!-- Hidden input to hold the final combined string -->
+                    <input type="hidden" id="URLImageList" asp-for="NewGameMechanic.URLImageList" />
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="addremovebtn focus-ring btn px-3">Submit</button>
+                    </div>
+
+                </form>
 
 
-                        <form class="d-inline" id="deleteForm-@gameMechanics.GameMechId" method="post" asp-action="DeleteGameplay" asp-route-id="@gameMechanics.GameMechId">
-                            <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1" onclick="confirmDelete(event, 'deleteForm-@gameMechanics.GameMechId')"><i class="fa-solid fa-trash fa-sm"></i>Delete</button>
-                        </form>
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
+            </div>
+
+        </div>
+
+    </div>
+</div>
 @* MODAL POPUP FOR EDITING RECORD *@
 <div class="modal fade" id="editGameplayModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header rounded-top-4">
                 <h5 class="modal-title">Edit Gameplay</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-light" data-bs-dismiss="modal"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body py-3 px-4 rounded-bottom-4">
                 <form id="editGameplayForm" method="post" asp-action="EditGameplay">
                     <input type="hidden" id="gamemechid" name="GameMechId">
 
                     <div class="mb-3">
-                        <label class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="GMName" required>
+                        <label class="form-label">Mechanics Name <span class="reqsymbol">*</span></label>
+                        <input type="text" class="form-control focus-ring" id="name" name="GMName" required>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Description</label>
-                        <textarea class="form-control" id="description" name="Description" rows="8" required></textarea>
+                        <label class="form-label">Description <span class="reqsymbol">*</span></label>
+                        <textarea class="form-control focus-ring" id="description" name="Description" rows="8" required></textarea>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Image URLs (one link per new line)</label>
-                        <textarea class="form-control modal-dialog-scrollable" rows="10" id="urls" name="URLImageList" placeholder="Image URLs (one per new line)"></textarea>
+                        <textarea class="form-control focus-ring modal-dialog-scrollable" rows="10" id="urls" name="URLImageList" placeholder="Image URLs (one per new line)"></textarea>
                     </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="addremovebtn focus-ring btn px-3">Save Changes</button>
 
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-
 @section Scripts {
     <script>
         function addImageUrl() {
@@ -149,13 +181,13 @@
             let input = document.createElement("input");
             input.type = "text";
             input.name = "gameplayImageUrls";
-            input.className = "form-control";
+            input.className = "form-control mb-1 focus-ring";
             input.placeholder = "Enter Image URL";
 
             let button = document.createElement("button");
             button.type = "button";
-            button.className = "btn btn-danger";
-            button.innerText = "Remove";
+            button.className = "addremovebtn focus-ring btn mb-1";
+            button.innerHTML = '<i class="fa-solid fa-trash"></i> Remove';
             button.onclick = function () { removeImageUrl(button); };
 
             div.appendChild(input);
@@ -191,8 +223,10 @@
                     text: "You can always delete or edit the record later.",
                     icon: "warning",
                     showCancelButton: true,
-                    confirmButtonColor: "#3085d6",
-                    cancelButtonColor: "#d33",
+                    background: "#f8f4f1",
+                    color: "#603f26",
+                    confirmButtonColor: "#603f26",
+                    cancelButtonColor: "#8D493A",
                     confirmButtonText: "Yes, submit it!"
                 }).then((result) => {
                     if (result.isConfirmed) {
@@ -210,8 +244,10 @@
                 text: "You won't be able to revert this!",
                 icon: "warning",
                 showCancelButton: true,
-                confirmButtonColor: "#3085d6",
-                cancelButtonColor: "#d33",
+                background: "#f8f4f1",
+                color: "#603f26",
+                confirmButtonColor: "#603f26",
+                cancelButtonColor: "#8D493A",
                 confirmButtonText: "Yes, delete it!"
             }).then((result) => {
                 console.log("Swal result:", result); // Debugging line
